# beefdown

./: .gitignore  BUILD.md  Makefile  README.md  go.mod  go.sum  main.go  messages.go  sequence.go
beefdown-rs/: Cargo.toml  MIGRATION_PLAN.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE3_PROGRESS.md  README.md
beefdown-rs/examples/: debug_timing.rs  example_song.md  load_sequence.rs  midi_demo.rs  playback_demo.rs  sequence_demo.rs  timing_benchmark.rs
beefdown-rs/src/: clock.rs  device.rs  lib.rs  main.rs  midi_clock.rs  playback.rs  sync.rs  timing.rs
beefdown-rs/src/midi/: mod.rs  ports.rs
beefdown-rs/src/music/: chords.rs  mod.rs  notes.rs
beefdown-rs/src/parser/: beefdown.rs  markdown.rs  mod.rs
beefdown-rs/src/sequence/: arrangement.rs  mod.rs  part.rs  step.rs
beefdown-rs/src/tui/: app.rs  mod.rs  ui.rs  viewport.rs
device/: cgo.go  clock.go  device.go  device_test.go  messages.go  midi.go  playback.go  ports.go  rust_clock.go  state.go  sub.go
docs/: build.md  controls.md  division.md  midi-io.md  sync.md
examples/: chords-ii-v-i.md  chords.md  functions.md  gen-arpeggiate.md  gen-euclidean.md  slash-chords.md
midi/: messages.go  midi.go
music/: chord.go  note.go  notes.go
rust/: Cargo.toml  GO_INTEGRATION.md  INSTALL.md  MIGRATION_PLAN.md  PHASE3_PROGRESS.md  PHASE3_STATUS.md  PHASE4_COMPLETE.md  README.md  beefdown_clock.h  beefdown_midi.h
rust/src/: clock.rs  lib.rs  midi.rs  timing.rs
sequence/: arrangement.go  func.go  metadata.go  part.go  playable.go  regexp.go  sequence.go  step.go  step_test.go
sequence/func/: arpeggiate.go  func.go
sequence/generators/: arpeggiate.go  euclidean.go  generators.go
sequence/parsers/base/: base.go
sequence/parsers/metadata/: metadata.go  metadata_test.go
sequence/parsers/part/: part.go  part_test.go
sequence/syllables/: syllables.go  syllables_test.go
ui/: model.go  style.go  ui.go  update.go  view.go  viewport.go
