[package]
name = "beefdown-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# MIDI I/O
midir = "0.10"

# Real-time performance
thread-priority = "1.2"
crossbeam-channel = "0.5"

# High-resolution timing (macOS)
mach2 = "0.4"

# Parsing
regex = "1.10"

# Async runtime (for future use)
tokio = { version = "1", features = ["full"], optional = true }

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"
