[package]
name = "beefdown-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "beefdown_clock"
crate-type = ["cdylib", "rlib"]  # cdylib for C FFI, rlib for Rust tests

[dependencies]
# Real-time thread priorities
thread-priority = "1.2"

# High-resolution timing (macOS)
mach2 = "0.4"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"
