[package]
name = "beefdown"
version = "0.1.0"
edition = "2021"

[lib]
name = "beefdown"
crate-type = ["staticlib", "rlib"]  # staticlib for C FFI, rlib for Rust tests

[dependencies]
# Real-time thread priorities
thread-priority = "1.2"

# High-resolution timing (macOS)
mach2 = "0.4"
libc = "0.2"

# MIDI I/O
midir = "0.10"
lazy_static = "1.4"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"
